// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-empty не ошибки индекс теста: 0 1`] = `Array []`;

exports[`no-empty не ошибки индекс теста: 1 1`] = `Array []`;

exports[`no-empty не ошибки индекс теста: 2 1`] = `Array []`;

exports[`no-empty не ошибки индекс теста: 3 1`] = `Array []`;

exports[`no-empty ошибки индекс теста: 0 1`] = `
Array [
  Object {
    "column": 10,
    "endColumn": 2,
    "endLine": 6,
    "line": 5,
    "message": "Empty block statement.",
    "messageId": "unexpected",
    "nodeType": "BlockStatement",
    "ruleId": "no-empty",
    "severity": 2,
  },
]
`;

exports[`no-empty ошибки индекс теста: 1 1`] = `
Array [
  Object {
    "column": 13,
    "endColumn": 2,
    "endLine": 6,
    "line": 5,
    "message": "Empty block statement.",
    "messageId": "unexpected",
    "nodeType": "BlockStatement",
    "ruleId": "no-empty",
    "severity": 2,
  },
]
`;

exports[`no-empty ошибки индекс теста: 2 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 2,
    "endLine": 6,
    "line": 5,
    "message": "Empty switch statement.",
    "messageId": "unexpected",
    "nodeType": "SwitchStatement",
    "ruleId": "no-empty",
    "severity": 2,
  },
]
`;

exports[`no-empty ошибки индекс теста: 3 1`] = `
Array [
  Object {
    "column": 13,
    "endColumn": 2,
    "endLine": 9,
    "line": 7,
    "message": "Empty block statement.",
    "messageId": "unexpected",
    "nodeType": "BlockStatement",
    "ruleId": "no-empty",
    "severity": 2,
  },
  Object {
    "column": 11,
    "endColumn": 2,
    "endLine": 11,
    "line": 9,
    "message": "Empty block statement.",
    "messageId": "unexpected",
    "nodeType": "BlockStatement",
    "ruleId": "no-empty",
    "severity": 2,
  },
]
`;
